# Impulse

./: .gitignore  CMakeLists.txt  READEME.md  README.md
assets/: style.qss
include/: MainWindow.h
include/core/: SessionController.h
include/core/tracks/: ClipModel.h  TrackModel.h
include/gui/: ActionBar.h  MultiRack.h  Theme.h
include/gui/browser/: FileBrowserWidget.h
include/gui/mixer/: ChannelControl.h  ChannelEffects.h  ChannelWidget.h  MixerChannelView.h  MixerView.h
include/gui/panels/: BrowserPanel.h  TrackView.h
include/gui/tracks/: ClipWidget.h  EmptyTrack.h  TrackControl.h  TrackLane.h  TrackWidget.h
src/: MainWindow.cpp  main.cpp
src/core/: SessionController.cpp
src/core/tracks/: ClipModel.cpp  TrackModel.cpp
src/gui/: ActionBar.cpp  MultiRack.cpp  Theme.cpp
src/gui/browser/: FileBrowserWidget.cpp
src/gui/mixer/: ChannelControl.cpp  ChannelEffects.cpp  ChannelWidget.cpp  MixerChannelView.cpp  MixerView.cpp
src/gui/panels/: BrowserPanel.cpp  TrackView.cpp
src/gui/tracks/: ClipWidget.cpp  EmptyTrack.cpp  TrackControl.cpp  TrackLane.cpp  TrackView.cpp  TrackWidget.cpp
